--- a/loven_app/pubspec.yaml
+++ b/loven_app/pubspec.yaml
@@ -23,6 +23,11 @@ dev_dependencies:
     sdk: flutter
   sqflite: ^1.3.1+1
   path_provider: ^1.6.14
+  rxdart: ^0.24.1
+  http: ^0.12.2
+  shared_preferences: ^0.5.12  
+  firebase_auth: ^0.18.0+1
+  cloud_firestore: ^0.14.0+2
 
 
 flutter:
